# claude_code_development_template

./: .gitignore  Makefile  README.md  env.example  pyproject.toml
.claude/: CLAUDE.md  hooks.json  settings.local.json
.claude/agents/: architect.md  code-reviewer.md  planner.md  security-reviewer.md  tdd-guide.md
.claude/commands/: code-review.md  lint.md  tdd.md  test.md
.claude/rules/: architecture.md  coding-style.md  git-workflow.md  security.md  testing.md
.claude/skills/: backend-patterns.md  coding-standards.md  security-review.md  tdd-workflow.md
.claude/skills/fix-document/: SKILL.md
.claude/skills/fix-document/assets/: template-madr.md  template-nygard.md
.claude/skills/fix-document/references/: example-nygard.md
docs/: development.md
docs/rules/: clean_architecture.md  code_review.md  git_workflow.md  python_standards.md  tdd.md
